--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,20 @@
-ntlk
-pickle
-tqdm
-rank_bm25
-pandas
-numpy
-fuzzywuzzy
-re
+cachelib==0.1.1
+click==7.1.2
+Flask==1.1.2
+Flask-Session==0.3.2
+fuzzywuzzy==0.18.0
+itsdangerous==1.1.0
+Jinja2==2.11.2
+joblib==0.17.0
+MarkupSafe==1.1.1
+nltk==3.5
+numpy==1.19.2
+pandas==1.1.3
+python-apt==2.0.0+ubuntu0.20.4.1
+python-dateutil==2.8.1
+pytz==2020.1
+rank-bm25==0.2.1
+regex==2020.10.15
+six==1.15.0
+tqdm==4.50.2
+Werkzeug==1.0.1
